--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Automatically update version and update changelog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall" : "scripts/install.js",
-    "postuninstall" : "scripts/install.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
