--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "package-auto-version",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Automatically update version and update changelog",
   "main": "index.js",
   "scripts": {
+    "pav": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,12 @@
   "homepage": "https://bitbucket.org/cinada/package-auto-version#readme",
   "bin": {
     "pav": "./bin/pav"
+  },
+  "pav": {
+    "changelog": "./CHANGELOG.md",
+    "changelogTemplate": "./template.md",
+    "noPrompt": true,
+    "versions": "minor,major,patch"
   },
   "dependencies": {
     "craydent": "^0.9.0"
