--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "pav": "./bin/pav"
   },
   "pav": {
-    "changelog": "./CHANGELOG.md",
-    "changelogTemplate": "./template.md",
+    "changelog": "<rootDir>/CHANGELOG.md",
+    "changelogTemplate": "<rootDir>/git-documentation",
     "noPrompt": true,
     "versions": "minor,major,patch",
-    "match": "## \\[.*?\\] - .*?\n"
+    "match": "<rootDir>/git-documentation-match"
   },
   "dependencies": {
     "craydent": "^0.9.0"
